<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="upcoming_elections_header">Upcoming Elections</string>
    <string name="saved_elections_header">Saved Elections</string>
    <string name="loading_upcoming_elections_message">Loading upcoming Elections</string>
    <string name="load_upcoming_elections_success">Load upcoming Elections success</string>
    <string name="load_upcoming_elections_error">Load upcoming Elections Error</string>
    <string name="could_not_load_voter_info">Could not load this Voter info</string>
    <string name="voting_location_click">Voting Locations - Click to open</string>
    <string name="ballot_information_click">Ballot Information - Click to open</string>
    <string name="election_info_click">Election information \n(Click to view detail)</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">UnFollow Election</string>

    <string name="facebook_content_description">Facebook</string>
    <string name="twitter_content_description">Twitter</string>
    <string name="www_content_description">WWW Link</string>
    <string name="representative_search_title">Representative Search</string>
    <string name="find_my_representatives_search">Find my representatives</string>
    <string name="use_my_location_search">Use my location</string>
    <string name="my_representatives_title">My Representatives</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city_text_hint">city</string>
    <string name="zip_text_hint">Zip</string>
    <string name="load_representatives_failed_message">Load representatives failed</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>


</resources>
