<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node for Voter Info ViewModel -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!--  Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.election.name}"
            app:titleTextColor="@color/white"
            tools:title="@string/app_name" />

        <!--  Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            style="@style/DateTextStyle"
            android:text="@{viewModel.election.electionDay.toLocaleString()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <!--  Add visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            style="@style/VoterInfoHeaderStyle"
            goneIfUrlNull="@{viewModel.electionInfoUrl}"
            android:layout_marginTop="@dimen/margin_normal"
            android:clickable="true"
            android:onClick="@{()->viewModel.onUrlClick(viewModel.electionInfoUrl)}"
            android:text="@string/election_info_click"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            tools:text="@string/election_info_click" />

        <!--  Add click binding to open web URL -->
        <!--  Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            style="@style/InfoTextStyle"
            goneIfUrlNull="@{viewModel.votingLocationUrl}"
            android:clickable="true"
            android:onClick="@{()->viewModel.onUrlClick(viewModel.votingLocationUrl)}"
            android:text="@string/voting_location_click"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <!--  Add click binding to open web URL -->
        <!--  Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            style="@style/InfoTextStyle"
            goneIfUrlNull="@{viewModel.ballotInformationUrl}"
            android:clickable="true"
            android:onClick="@{()->viewModel.onUrlClick(viewModel.ballotInformationUrl)}"
            android:text="@string/ballot_information_click"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            tools:text="correspondence_header" />

        <!--  Add data binding -->
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="Address" />

        <!--  Add button to save election to Room -->
        <Button
            android:id="@+id/followButton"
            customText="@{viewModel.isFollowing}"
            goneIfElectionNull="@{viewModel.election}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@color/colorPrimaryDark"
            android:onClick="@{()->viewModel.onFollowButtonClick()}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/follow_election" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>